Update image source in Ahaliya.html

--- a/Ahaliya.html
+++ b/Ahaliya.html
@@ -101,7 +101,7 @@
 <div class="container">
 
     <div class="photo-card">
-        <img src="aha.png" alt="Ahaliya">
+        <img src="c4edfde6-bc01-461a-ab40-e7cecde74244.jpeg" alt="Ahaliya">
     </div>
 
     <h1>Happy Birthday, Ahaliya 🎉</h1>
